# XPEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  License.md  ReadMe.md
.github/workflows/: App.yml
App/: .gitignore  CMakeLists.txt
App/Assets/Shaders/: texturedCube.glsl  triangle.glsl
App/Platform/: Apple.plist.in  CompileShaders.bat  CompileShaders.cmake  CompileShaders.sh
App/Platform/Android/: .gitignore  build.gradle.kts  settings.gradle.kts
App/Platform/Android/src/main/: AndroidManifest.xml
App/Platform/Android/src/main/res/values/: strings.xml
App/ShaderCache/Shaders/: triangle.h
App/Source/: main.cpp  sokol.m
Engine/: CMakeLists.txt
Engine/Dependencies/: CMakeLists.txt
Engine/Include/Engine/: API.hpp  UUID.hpp
Engine/Source/: UUID.cpp
Platform/: DetectPlatforms.cmake  EmscriptenShell.html  VersionInfo.cmake
Platform/Android/: AppGlue.cmake
